--- a/.gitignore
+++ b/.gitignore
@@ -10,10 +10,24 @@ gen
 # Compiled class file
 *.class
 # Package Files #
-*.jar
+*.jar--
 *.war
 *.nar
 *.ear
 *.zip
 *.tar.gz
 *.rar
+
+#maven
+target/
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.versionsBackup
+pom.xml.next
+release.properties
+dependency-reduced-pom.xml
+buildNumber.properties
+.mvn/timing.properties
+.mvn/wrapper/maven-wrapper.jar
+/test-output/
+/.allure/
