--- a/pom.xml
+++ b/pom.xml
@@ -69,7 +69,7 @@
         <dependency>
             <groupId>io.qameta.allure</groupId>
             <artifactId>allure-testng</artifactId>
-            <version>2.0-BETA14</version>
+            <version>2.8.1</version>
         </dependency>
         <dependency>
             <groupId>org.hamcrest</groupId>
