--- a/src/test/resources/parameters.properties
+++ b/src/test/resources/parameters.properties
@@ -4,3 +4,8 @@ update_activity_string=作业活动修改内容
 search_activity_string=测试作业活动
 #危险源管理部分
 add_hazard_string=测试危险源
+#年度风险录入
+#风险描述
+yePossiblyHazard=活矸危岩掉落造成作业人员伤害
+#罚款金额
+fineMoney=10 
