--- a/src/test/resources/parameters.properties
+++ b/src/test/resources/parameters.properties
@@ -11,3 +11,11 @@ yePossiblyHazard=活矸危岩掉落造成作业人员伤害
 fineMoney=10 
 #隐患描述
 yeMhazardDesc=未检查顶帮情况
+#新工作面风险评估
+xgzm_name=xxx工作面风险评估
+xgzm_leaderType=安监处长
+xgzm_leader=管理员
+xgzm_time=2019-01-01
+xgzm_teamMembers=管理员
+xgzm_location=ces
+xgzm_remark=此风险评估为自动录入。
