--- a/pom.xml
+++ b/pom.xml
@@ -151,6 +151,9 @@
                 <groupId>io.qameta.allure</groupId>
                 <artifactId>allure-maven</artifactId>
                 <version>2.8</version>
+                <configuration>
+                    <reportVersion>2.3.1</reportVersion>
+                </configuration>
             </plugin>
         </plugins>
     </reporting>
