--- a/src/test/resources/parameters.properties
+++ b/src/test/resources/parameters.properties
@@ -15,7 +15,7 @@ yeMhazardDesc=未检查顶帮情况未检查顶帮情况5
 xgzm_name=xxx工作面风险评估yePossiblyHazard
 xgzm_leaderType=安监处长
 xgzm_leader=管理员
-xgzm_time=2019-01-01
+xgzm_time=2019-01-24
 xgzm_teamMembers=管理员
-xgzm_location=ces
+xgzm_location=测试风险点1
 xgzm_remark=此风险评估为自动录入。
